docs/apache-airflow-providers-google/10.8.0/_sources/_api/tests/system/providers/google/cloud/transfers/example_postgres_to_gcs/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.transfers.example_postgres_to_gcs`
===============================================================================

.. py:module:: tests.system.providers.google.cloud.transfers.example_postgres_to_gcs

.. autoapi-nested-parse::

   Example DAG using PostgresToGoogleCloudStorageOperator.



Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'example_postgres_to_gcs'

   

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: CLOUD_SQL_INSTANCE

   

.. py:data:: CLOUD_SQL_INSTANCE_CREATION_BODY

   

.. py:data:: DB_NAME

   

.. py:data:: DB_PORT
   :value: 5432

   

.. py:data:: DB_CREATE_BODY

   

.. py:data:: DB_USER_NAME
   :value: 'demo_user'

   

.. py:data:: DB_USER_PASSWORD
   :value: 'demo_password'

   

.. py:data:: CONNECTION_ID

   

.. py:data:: BUCKET_NAME

   

.. py:data:: FILE_NAME
   :value: 'result.json'

   

.. py:data:: SQL_TABLE
   :value: 'test_table'

   

.. py:data:: SQL_CREATE

   

.. py:data:: SQL_INSERT

   

.. py:data:: SQL_SELECT

   

.. py:data:: log

   

.. py:data:: create_cloud_sql_instance

   

.. py:data:: test_run

   

