docs/apache-airflow-providers-google/10.10.0/_sources/_api/tests/system/providers/google/cloud/transfers/example_postgres_to_gcs/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.transfers.example_postgres_to_gcs`
===============================================================================

.. py:module:: tests.system.providers.google.cloud.transfers.example_postgres_to_gcs

.. autoapi-nested-parse::

   Example DAG using PostgresToGCSOperator.

   This DAG relies on the following OS environment variables

   * AIRFLOW__API__GOOGLE_KEY_PATH - Path to service account key file. Note, you can skip this variable if you
     run this DAG in a Composer environment.



Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'example_postgres_to_gcs'

   

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: REGION
   :value: 'europe-west2'

   

.. py:data:: ZONE

   

.. py:data:: NETWORK
   :value: 'default'

   

.. py:data:: DB_NAME
   :value: 'testdb'

   

.. py:data:: DB_PORT
   :value: 5432

   

.. py:data:: DB_USER_NAME
   :value: 'demo_user'

   

.. py:data:: DB_USER_PASSWORD
   :value: 'demo_password'

   

.. py:data:: SHORT_MACHINE_TYPE_NAME
   :value: 'n1-standard-1'

   

.. py:data:: DB_INSTANCE_NAME

   

.. py:data:: GCE_INSTANCE_BODY

   

.. py:data:: DELETE_PERSISTENT_DISK

   

.. py:data:: SETUP_POSTGRES

   

.. py:data:: FIREWALL_RULE_NAME

   

.. py:data:: CREATE_FIREWALL_RULE

   

.. py:data:: DELETE_FIREWALL_RULE

   

.. py:data:: CONNECTION_ID

   

.. py:data:: BUCKET_NAME

   

.. py:data:: FILE_NAME
   :value: 'result.json'

   

.. py:data:: SQL_TABLE
   :value: 'test_table'

   

.. py:data:: SQL_CREATE

   

.. py:data:: SQL_INSERT

   

.. py:data:: SQL_SELECT

   

.. py:data:: log

   

.. py:data:: create_instance

   

.. py:data:: test_run

   

